## Rails 3.0.21 (unreleased)

* Quote numeric values being compared to non-numeric columns. Otherwise,
  in some database, the string column values will be coerced to a numeric
  allowing 0, 0.0 or false to match any string starting with a non-digit.

  Example:

    App.where(apikey: 0) # => SELECT * FROM users WHERE apikey = '0'

## Rails 3.0.20 (Jan 28, 2013)

## Rails 3.0.19 (Jan 8, 2013)

* Fix querying with an empty hash *Damien Mathieu* [CVE-2013-0155]

## Rails 3.0.18 (Jan 2, 2013)

* CVE-2012-5664 ensure that options are never taken from the first parameter

## Rails 3.0.17 (Aug 9, 2012)

* Fix type_to_sql with text and limit on mysql/mysql2 (GH #7252)

## Rails 3.0.16 (Jul 26, 2012)

* No changes.

## Rails 3.0.14 (Jun 12, 2012)

* protect against the nesting of hashes changing the
  table context in the next call to build_from_hash. This fix
  covers this case as well.

  CVE-2012-2695

* Rails 3.0.13 (May 31, 2012)

* Bugfix circular reference while saving has_one relationship

* Test for circular reference while saving has_one relationship

* Fixed typo in composed_of example with Money#<=>

* predicate builder should not recurse for determining where columns.
  Thanks to Ben Murphy for reporting this! CVE-2012-2661

* Rails 3.0.11 (unreleased)

* Exceptions from database adapters should not lose their backtrace.

* Backport "ActiveRecord::Persistence#touch should not use default_scope" (GH #1519)

* Psych errors with poor yaml formatting are proxied. Fixes GH #2645 and
  GH #2731

* Fix ActiveRecord#exists? when passsed a nil value


* Rails 3.0.10  (August 16, 2011)

* Magic encoding comment added to schema.rb files

* schema.rb is written as UTF-8 by default.

* Ensuring an established connection when running `rake db:schema:dump`

* Association conditions will not clobber join conditions.

* Destroying a record will destroy the HABTM record before destroying itself.
GH #402.

* Make `ActiveRecord::Batches#find_each` to not return `self`.
