@@ -25,7 +25,9 @@ module ActiveRecord
     end
 
     def test_where_with_table_name_and_empty_hash
-      assert_equal 0, Post.where(:posts => {}).count
+      assert_raises(ArgumentError) do
+        Post.where(:posts => {})
+      end
     end
 
     def test_where_with_table_name_and_empty_array
@@ -33,7 +35,9 @@ module ActiveRecord
     end
 
     def test_where_with_empty_hash_and_no_foreign_key
-      assert_equal 0, Edge.where(:sink => {}).count
+      assert_raises(ArgumentError) do
+        Edge.where(:sink => {})
+      end
     end
 
     def test_where_with_integer_for_string_column
