@@ -1,5 +1,8 @@
 ## Rails 3.0.21 (unreleased)
 
+* Raise `ArgumentError` instead of generating invalid SQL when empty hash is
+	used in where clause value.
+
 * Quote numeric values being compared to non-numeric columns. Otherwise,
   in some database, the string column values will be coerced to a numeric
   allowing 0, 0.0 or false to match any string starting with a non-digit.
